<resources>
    <string name="app_name">Photo Composer</string>

    <!--Main & Signup Activity-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Sign Up</string>
    <string name="enter_email">Please enter an email.</string>
    <string name="enter_password">Please enter a password.</string>
    <string name="logged_in_user">Logged in as user: %1$s</string>
    <string name="not_exist">Error: An account with this email does not exists.</string>
    <string name="login_error">Error: Failed to login user. %1$s</string>
    <string name="invalid_cred">Error: Invalid credentials.</string>
    <string name="network_error">Error: Unable to connect to network.</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="reenter_password">Please re-enter your password.</string>
    <string name="match_password">Please make passwords match.</string>
    <string name="created_user">Created user: %1$s</string>
    <string name="already_exists">Error: An account with this email already exists.</string>
    <string name="signup_error">Error: Failed to sign up user. %1$s</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="reset_success">Reset email sent</string>
    <string name="reset_fail">Reset email could not be sent></string>
    <string name="photo_composer_logo">Photo Composer Logo</string>

    <!---Navigation Activity-->
    <string name="capture">CAPTURE PHOTO</string>
    <string name="upload">UPLOAD PHOTO</string>
    <string name="portfolio">VIEW PORTFOLIO</string>
    <string name="home">HOME</string>
    <string name="log_out">LOG OUT</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>

    <!---Portfolio Activity-->
    <string name="portfolio_title">PORTFOLIO</string>
    <string name="edit">EDIT</string>
    <string name="done_editing">DONE EDITING</string>
    <string name="delete_dialog">Are you sure you want to delete this photo? This action cannot be undone.</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>
    <string name="empty_portfolio">You do not have any graded photos saved.</string>

    <!---Grading Activity-->
    <string name="thirds"><u>Rule of thirds:</u></string>
    <string name="framing"><u>Framing:</u></string>
    <string name="exposure"><u>Exposure:</u></string>
    <string name="level"><u>Leveling:</u></string>
    <string name="blur"><u>Blur:</u></string>

    <!---Similar Activity-->
    <string name="thirds_rec">Rule of Thirds: position your subject at a horizontal-vertical intersection ➤</string>
    <string name="framing_rec_1">Framing: move closer to your subject (or zoom in!) ➤</string>
    <string name="framing_rec_2">Framing: move away from your subject (or zoom out!) ➤</string>
    <string name="exposure_rec_1">Exposure: darken lighting, or adjust the exposure on your device ➤</string>
    <string name="exposure_rec_2">Exposure: brighten lighting, or adjust the exposure on your device ➤</string>
    <string name="blur_rec">Clarity: focus on your subject and make sure your lens is clean ➤</string>
    <string name="level_rec">Level: don\'t tilt your camera, keep it level with the horizon ➤</string>
    <string name="perfect">Congratulations! Your photo composition is excellent.</string>
    <string name="photo_ref_error">Failed to retrieve photo reference.</string>
    <string name="image_data_error">Failed to retrieve image data.</string>

    <!--Camera Activity-->
    <string name="back_button_content_description">Returns the users to the home page.</string>
    <string name="flash_button_content_description">Enables or disables flash.</string>

    <!--Results Activity-->
    <string name="reveal_subjects">REVEAL SUBJECTS</string>
    <string name="hide_subjects">HIDE SUBJECTS</string>
    <!--SubjectAnalyzer-->
    <string name="subject_detection_model_path">lite-model_ssd_mobilenet_v1_1_metadata_2.tflite</string>
    <string name="subject_detection_model_path_v2">mobilenet_v2_1.0_224_quantized_1_metadata_1.tflite</string>
    <string name="subject_detection_model_path_class_agnostic">class_agnostic_subject_detector.tflite</string>

</resources>
