<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PortfolioActivity">

    <ImageView
        android:id="@+id/portfolioLogo"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/photo_composer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_small_logo_w_circle" />

    <ImageView
        android:id="@+id/lightBackgroundPort"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolioLogo"
        app:srcCompat="@drawable/light_grey_background" />

    <TextView
        android:id="@+id/myUploadsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/portfolio_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/portBackFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/darkBackgroundPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lightBackgroundPort"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/darkBackgroundPort"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dark_grey_background" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_button"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:text="@string/edit"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/darkBackgroundPort"
        app:layout_constraintEnd_toEndOf="@+id/darkBackgroundPort"
        app:layout_constraintTop_toTopOf="@+id/darkBackgroundPort"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/doneEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/white_button"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:text="@string/done_editing"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/darkBackgroundPort"
        app:layout_constraintEnd_toEndOf="@+id/darkBackgroundPort"
        app:layout_constraintTop_toTopOf="@+id/darkBackgroundPort"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/emptyPortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_portfolio"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>